--- a/500.html
+++ b/500.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html><html lang="de"><head>
 <!-- ENCODE --><meta charset="utf-8">
 <!-- OPTIMIZE --><meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,56 +7,65 @@
 <meta name="keywords" content="linux,windows,cybersecurity,hacking,coding,shell,tools,network,basics">
 <meta name="author" content="Jumi">
 <!-- FAVICON --><link rel="icon" href="assets/img/ico/jumi.ico">
-<!-- TITLE --><title>jumi|500</title>
-
-<link rel="stylesheet" type="text/css" href="assets/css/basic.css">
-<link rel="stylesheet" type="text/css" href="assets/css/layout.css">
+<!-- TITLE --><title>500</title>
+<!-- CSS -->
+<link rel="stylesheet" type="text/css" href="assets/css/animations.css">
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<link rel="stylesheet" type="text/css" href="assets/css/layout.css">
 <style>
 :root { /* Farben */
-	--vader-black: #131313;
+	--shadow-grey: #131313;
 	--pipi-white: #ebebd3;
 	--matrix-green: #8dd88e;
-	--neon-blue: #00f0f0;
+	--laser-blue: #00f0f0;
 	--neon-pink: #ffbfea;
+	--high-ground: rgba(0,0,0,0.1);
+	--space-motion:
+        rgba(0, 240, 240, 0.4) 0px 2px 4px,
+        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
+        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+    --ants-cry:
+        rgba(0, 0, 0, 0.1) 0px 2px 4px,
+        rgba(0, 0, 0, 0.4) 0px -2px 0px inset;
 }
-html {background-color: var(--vader-black);}
+@keyframes neon {
+     from {text-shadow:
+          0 0 6px rgba(202,228,225,0.92),
+          0 0 30px rgba(202,228,225,0.34),
+          0 0 12px rgba(30,132,242,0.52),
+          0 0 21px rgba(30,132,242,0.92),
+          0 0 34px rgba(30,132,242,0.78),
+          0 0 54px rgba(30,132,242,0.92);
+    } to {text-shadow:
+          0 0 6px rgba(202,228,225,0.98),
+          0 0 30px rgba(202,228,225,0.42),
+          0 0 12px rgba(30,132,242,0.58),
+          0 0 22px rgba(30,132,242,0.84),
+          0 0 38px rgba(30,132,242,0.88),
+          0 0 60px rgba(30,132,242,1);}}
+@keyframes neon-box {
+    from {box-shadow: 0 0 6px rgba(202, 228, 225, 0.92),0 0 24px rgba(202, 228, 225, 0.34), 0 0 9.6px rgba(30, 132, 242, 0.52), 0 0 16.8px rgba(30, 132, 242, 0.92), 0 0 27.2px rgba(30, 132, 242, 0.78), 0 0 43.2px rgba(30, 132, 242, 0.92);
+    }
+    to {box-shadow: 0 0 6px rgba(202, 228, 225, 0.98), 0 0 24px rgba(202, 228, 225, 0.42), 0 0 9.6px rgba(30, 132, 242, 0.58), 0 0 17.6px rgba(30, 132, 242, 0.84), 0 0 30.4px rgba(30, 132, 242, 0.88), 0 0 48px rgba(30, 132, 242, 1);}}
+html {background-color: var(--shadow-grey);}
 body {
-    position: relative;/* Footer-Einfluss */
-    height: 100%;/* Footer-Einfluss */
-    min-width:100%;
-    margin: 0;padding: 0;
-    text-rendering: optimizeSpeed;
+  font-size: var(--base-font-size);
+  height: 100%;/* Footer-Einfluss */
+  margin:0;padding:0;
+  position: relative;/* Footer-Einfluss */
+  text-rendering: optimizeSpeed;
 }
 *,*::before,*::after {box-sizing: border-box;}
 </style>
 </head>
 <!-- BODY -->
-<body id="ଘ(੭*ˊᵕˋ)੭*ˋhello ɪɴᴛᴇʀɴᴇᴛ ">
+<body id="ଘ(੭*ˊᵕˋ)੭*ˋhello_ɪɴᴛᴇʀɴᴇᴛ">
 <header><div class="header-content">
 <!-- LOGO -->
-<span id="jumi-logo"><img src="assets/img/ico/jumi.ico"></span>
+<span id="jumi-logo"><img src="assets/img/ico/jumi.ico" alt="Jumi Logo"></span>
 <a href="https://www.jumi.biz"><span id="jumi-biz">jumi.biz</span></a>
 <!-- BUTTON -->
-<nav class="navigation">
-<button class="menu-button"
-        aria-controls="menu-list"
-        aria-expanded="false">
-  <span class="hidden-menu">Menu</span>
-  <div class="menu-icon" aria-hidden="true"></div>
-</button></div><div class="header-text"><span>INTERNAL SERVER ERROR 500</span>
-<!-- MENU -->
-<ul data-state="closed" class="menu-list">
-<li><a href="Content.htm"><i class="list-icon">
-<img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
-<li><a href="Links.htm"><i class="list-icon">
-<img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
-<li><a href="Cheats.htm"><i class="list-icon">
-<img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://www.jumi.biz"><i class="list-icon">
-<img src="assets/img/ico/jumi.ico" alt="WTF is jumi?"></i>wtf is jumi?</a></li>
-</ul></nav></div></header>
-<main>
+</div></header><main>
 <!-- MAIN -->
 <div class="grid-container">
 
@@ -77,6 +85,7 @@ Schreibe eine Email an:</p>
 <h2>webmaster&#64;jumi.biz</h2>
 
 </div></main>
+
 <footer><div class="footer-container">
 <div class="leftside-profil-icons">
 <!-- GITHUB -->
@@ -95,6 +104,7 @@ Schreibe eine Email an:</p>
 <a id="goto-top" href="#">
 <img src="assets/img/ico/go-top.ico" alt="Zum Seitenanfang"></a></div></div></footer>
 <!-- SCRIPTS -->
-<script src="assets/js/menu.js"></script>
-<script src="assets/js/modal.js"></script>
+<script defer src="assets/js/menu.js"></script>
+<script defer src="assets/js/modal.js"></script>
+
 </body></html>
