fixed: table, grid gap, main section

--- a/index.html
+++ b/index.html
@@ -120,8 +120,6 @@ nach zwei Tagen <b>~30%</b> im Gedächtnis. (0,25*0,3=<b>7,5%</b>)</section>
 <blockquote><b>Text A</b> Zwanzig Zwerge machen Handstand,
 zehn im Wandschrank, zehn am Sandstrand.</blockquote>
 <blockquote><b>Text B</b> Ort / Zwergenhandstände:<br> Schrank / 10, Strand / 10</blockquote>
-</section>
-<section class="flex">
 <table>
 <caption>Vergleich</caption>
     <thead>
@@ -147,9 +145,7 @@ zehn im Wandschrank, zehn am Sandstrand.</blockquote>
         </tr>
     </tbody>
 </table></section>
-
-</p></section>
-<!-- ABOUT -->
+<!-- INFOS -->
 <section class="flex">
 <aside><h4>$ history</h4><ul>
     <li>[2019-06] Domain gemietet</li>
