--- a/index.html
+++ b/index.html
@@ -148,19 +148,19 @@ zehn im Wandschrank, zehn am Sandstrand.</blockquote>
 <!-- INFOS -->
 <section class="flex">
 <aside><h4>$ history</h4><ul>
-    <li>[2019-06] Domain gemietet</li>
-    <li>[2020/21] Konzeptentwicklung</li>
-    <li>[2022-11] Ausarbeitung</li>
-    <li>[2023-03] Designentwicklung</li>
-    <li>[2023-08] Github-Anbindung</li>
-    <li>[2023-10] Integration</li></ul></aside>
+    <li>[19-06] Domain gemietet</li>
+    <li>[20/21] Konzeptentwicklung</li>
+    <li>[22-11] Ausarbeitung</li>
+    <li>[23-03] Designentwicklung</li>
+    <li>[23-08] Github-Anbindung</li>
+    <li>[23-10] Integration</li></ul></aside>
 <aside><h4>To-Do:</h4><ul>
-    <li>[2023-11] Edits/Content</li>
-    <li>[2023-11] Instagram Content</li>
-    <li>[2023-12] JavaScript AddOns</li>
-    <li>[2024-01] PHP-Implementierung</li>
-    <li>[2024-01] Quiz-Feature(ChatGPT)</li>
-    <li>[2024-01] Themes-Feature</li></ul></aside>
+    <li>[23-11] Edits/Content</li>
+    <li>[23-11] Instagram Content</li>
+    <li>[23-12] JavaScript AddOns</li>
+    <li>[24-01] PHP-Implement</li>
+    <li>[24-01] Quiz-Feature</li>
+    <li>[24-01] Themes-Feature</li></ul></aside>
 </section>
 <section class="flex">
 <table id="tasten-steuerung">
